# backend/internal/transport/http/restHTTP/category/dto/category_response.go
@@ -2,6 +2,7 @@ package dto
 
 // swagger:model CategoryResponse
 type CategoryResponse struct {
-	ID   int64  `json:"id" example:"3"`
-	Name string `json:"name" example:"Керамогранит"`
+	ID       int64  `json:"id" example:"3"`
+	Name     string `json:"name" example:"Керамогранит"`
+	ParentID *int64 `json:"parent_id,omitempty" example:"1"`
 }
